# HyCnXtViT-for-Age-Estimation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: morph2_hybrid.yaml
legacy/: train_HyCnXtViT.py  train_convnext.py  train_convnext_final.py  train_transformer.py  train_transformer_convnext.py  train_transformer_final.py
scripts/: build_index_pickle.py  eval.py  train.py
src/cnxtvit/: __init__.py  data.py  exp.py  model.py  utils_cfg.py  vit.py
